--- a/Healthcare Analytics_test.ipynb
+++ b/Healthcare Analytics_test.ipynb
@@ -5899,7 +5899,7 @@
    "source": [
     "clf = lgb.LGBMClassifier(**params)\n",
     "clf.fit(x, np.ravel(y), eval_metric='multi_error', verbose=False)\n",
-    "predparams= clf.predict(x_eval)\n",
+    "predparams= clf.predict(x)\n",
     "predparams"
    ]
   },
